--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/jsonwebtoken": "^8.5.9",
     "@types/mysql": "^2.15.21",
     "@types/node": "^18.11.17",
+    "@types/stripe": "^8.0.417",
     "@types/twilio": "^3.19.3",
     "typescript": "^4.9.4"
   },
@@ -34,6 +35,7 @@
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^9.0.0",
     "mysql": "^2.18.1",
+    "stripe": "^11.5.0",
     "twilio": "^2.5.2"
   }
 }
