--- a/package.json
+++ b/package.json
@@ -14,27 +14,33 @@
   "license": "ISC",
   "devDependencies": {
     "@types/axios": "^0.14.0",
-    "@types/cookie-parser": "^1.4.3",
+    "@types/bcrypt": "^5.0.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.15",
+    "@types/express-fileupload": "^1.4.1",
     "@types/http-status-codes": "^1.2.0",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/mysql": "^2.15.21",
     "@types/node": "^18.11.17",
+    "@types/nodemailer": "^6.4.7",
     "@types/stripe": "^8.0.417",
     "@types/twilio": "^3.19.3",
     "typescript": "^4.9.4"
   },
   "dependencies": {
     "axios": "^1.2.1",
-    "cookie-parser": "^1.4.6",
+    "bcrypt": "^5.1.0",
+    "cloudinary": "^1.33.0",
     "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "express-fileupload": "^1.4.0",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^9.0.0",
     "mysql": "^2.18.1",
+    "mysql-events": "^0.0.11",
+    "nodemailer": "^6.8.0",
     "stripe": "^11.5.0",
     "twilio": "^2.5.2"
   }
