--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "@types/nodemailer": "^6.4.7",
     "@types/stripe": "^8.0.417",
     "@types/twilio": "^3.19.3",
+    "nodemon": "^2.0.22",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
   "dependencies": {
     "axios": "^1.2.1",
     "bcrypt": "^5.1.0",
-    "cloudinary": "^1.33.0",
+    "cloudinary": "^1.37.0",
     "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
